refactor: replace field injection with constructor injection